[tool.poetry]
name = "streamlit-binomial-probability-ci"
version = "0.0.0"
description = "Little UI to compute confidence intervals given binomial observation"
authors = ["Scott Cole <scott.cole0@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
statsmodels = "^0.14.2"
streamlit = ">=1.5.0"
pyarrow = "8.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
